--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 authors = ["István Bozsó <bozso.istvan@csfk.mta.hu>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["use_hecs"]
+
+use_hecs = ["hecs"]
 
 [lib]
 name = "rusper"
@@ -12,3 +15,6 @@ path = "src/lib.rs"
 
 [dependencies]
 thiserror = "1.0"
+
+# feature dependencies
+hecs = { version = "0.3", optional = true }
